# gestio-feature

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BACKEND_AGENT_TASK.md  BUILD.md  NOTE_TERMINAL.md  README.md  frontend_md_files.txt  gestio.spec  install-mac-linux.sh  launcher.bat  launcher.py  launcher.sh  main.py  pyproject.toml  test_groq.py  test_output.txt
.agent/: skill-backend.md
.github/: BUILD.md  copilot-instructions.md
.github/workflows/: build.yml  deploy-site.yml
backend/: GLOSSARY.md  README.md  main.py  pyproject.toml
backend/api/: dashboard.py  echeances.py  goals.py  transactions.py
backend/config/: LOGIC_FLOW.md  README.md  __init__.py  logging_config.py  ocr_config.json  ocr_config.py  paths.py  salary_plan_default.yaml
backend/scripts/: migrate_attachments.py  migrate_database.py
backend/shared/: LOGIC_FLOW.md  README.md
config/: paths.py
distribution/: gestio.iss  launcher.py  launcher.sh  run.ps1  setup.ps1
domains/transactions/: __init__.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: api.ts
resources/: README.md
resources/styles/: calendar.css
scripts/: validate_french_keys.py
shared/ui/: README.md  __init__.py  category_manager.py  friendly_error.py  helpers.py  page_helpers.py  styles.py  toast_components.py
shared/utils/: __init__.py  categories_loader.py
skills/: backend.md  conventions.md  frontend.md
tests/: TEST_MODE.md  conftest.py
tests/test_api/: test_archiving.py  test_ocr_config.py  (+2 more)
ui-V1/: package-lock.json
(+296 files in other folders)
